# Django-jalali-date-new

./: LICENSE  README.md  pyproject.toml
jalali_date_new/: fields.py  model_fields.py  utils.py  widgets.py
jalali_date_new/static/jalali_date_new/js/: datepicker.js
jalali_date_new/templates/jalali_date_new/widgets/: jalalidate.html  jalalidatetime.html  jalalitime.html
